--- a/frontend/portfolio/styles.css
+++ b/frontend/portfolio/styles.css
@@ -117,6 +117,10 @@ body {
     border: 1px solid rgb(182, 118, 255);
 }
 
+.loupe{
+	width: 40px;
+}
+
 /**************************************************************************************/
 /***                                footer / headder                                ***/
 /**************************************************************************************/
