--- a/frontend/Devoirs/devoir_01/style.css
+++ b/frontend/Devoirs/devoir_01/style.css
@@ -13,6 +13,10 @@ footer {
 	padding-left: 10px;
 }
 
+/********************************************************************************/
+/***                                   Grid                                   ***/
+/********************************************************************************/
+
 .main-grid {
 	background-color: #afafaf;
 	display: grid;
@@ -27,42 +31,55 @@ footer {
 	box-shadow: 0 2px 4px rgba(0,0,0,0.15);
 }
 
+/********************************************************************************/
+/***                                  AppBar                                  ***/
+/********************************************************************************/
+
 .app-bar {
     background-color: #3b44be;
     display: flex;
-    justify-content: flex-start;
     align-items: center;
-    padding: 8px;
-    /* box-shadow: 0 2px 4px rgba(0,0,0,0.1); */
+    padding: 6px;
 }
 
 .facebook-logo {
-	margin-right: auto;
-	/* width: 100px; */
-	/* border-radius: 50%; */
-	flex: 0 0 auto;
+	margin-right: 6px;
 }
 
-.link-button {
-	align-items: right;
-	/* flex: 0 0 auto; */
-    /* display: flex; */
-    gap: 10px;
+.facebook-logo:hover {
+	cursor: pointer;
+	border-radius: 50%;
 }
 
 .search-div {
 	display: flex;
     align-items: center;
-	margin-right: 20px;
-    /* border-radius: 20px; */
+	align-content: left;
+	margin-right: auto;
 }
 
 .search {
+	height: 32px;
 	padding: 8px;
-    border-radius: 20px;
-	width: 200px;
+    border-radius: 4px;
+	width: 600px;
     border: 1px solid #ddd;
 	margin-left: 5px;
+}
+
+.search-container {
+    position: relative;
+    width: 100%;
+}
+
+.search-icon {
+    position: absolute;
+    right: 6px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
 }
 
 .logo {
@@ -87,118 +104,6 @@ footer {
 	cursor: pointer;
 }
 
-.side-left {
-	background-color: #f5f5f5;
-	padding: 15px;
-	border-radius: 8px;
-}
-
-.content {
-	background-color: #ffffff;
-	padding: 10px;
-	border-radius: 8px;
-}
-
-.one-publication {
-	
-	background-color: #dbecfc;
-	padding: 15px;
-	margin-bottom: 20px;
-    align-items: center; 
-	box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-}
-
-.publication-image {
-	width: 100%;
-	border-radius: 8px;
-}
-
-.sub-content {
-	/* margin-bottom: 20px;
-	padding: 15px; */
-	display: flex;
-	justify-content: space-between;
-    align-items: center;
-}
-
-.side-right {
-	background-color: #f5f5f5;
-	padding: 15px;
-	border-radius: 8px;
-}
-
-.friend-item-publication {
-	background: none;
-	border: none;
-	display: flex;
-	justify-content: space-between;
-    align-items: center;
-	gap: 10px;
-}
-
-.friend-item {
-	background-color: #2093ff80;
-	width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-	border: none;
-	margin-bottom: 8px;
-	box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-}
-
-.friend-item:hover, .friend-item-publication:hover {
-	transform: scale(1.1);
-	box-shadow: 0 2px 4px #2d45ca96;
-	cursor: pointer;
-}
-
-.friend-avatar {
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	padding: 2px;
-}
-
-.friend-name {
-	font-size: 14px;
-	font-weight: bold;
-}
-
-.publish-date {
-	/* font-size: 12px;
-	color: #888;
-	display: flex;
-    align-items: center; */
-	font-size: 12px;
-    color: #888;
-    margin-left: auto;
-}
-
-.publication-actions {
-	display: flex;
-	justify-content: flex-end;
-    align-items: center;
-	gap: 4px;
-}
-
-.action-button {
-    cursor: pointer;
-	border-radius: 6px;
-	border: 1px solid #3d3d3d;
-	box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-}
-
-.action-button:hover {
-	transform: scale(1.1);
-	box-shadow: 0 2px 4px rgba(0, 173, 0, 0.5);
-	cursor: pointer;
-}
-
-.action-button-img {
-	width: 25px;
-	height: 25px;
-}
 
 .button {
     background: none;
@@ -207,19 +112,17 @@ footer {
     padding: 2px;
 }
 
-.sub-content h3 {
-	font-size: 16px;
-	font-weight: bold;
-}
+/********************************************************************************/
+/***                                  Profil                                  ***/
+/********************************************************************************/
 
 .profil {
-	background-image: url(https://www.csoonline.com/wp-content/uploads/2023/06/kali_linux_tools_abstract_gears_binary_data_by_nevarpp_gettyimages-688718788_2400x1600-100832674-orig.jpg?resize=1536%2C1024&quality=50&strip=all);
+	background-image: url(https://raw.githubusercontent.com/dracken24/portFolio/refs/heads/master/imgs/bgDragon01.jpg);
 	background-size: cover;
 	background-position: center;
 	color: #ffffff;
 	height: 150px;
 	display: flex;
-    /* align-items: center; */
 }
 
 .profil-logo {
@@ -253,10 +156,13 @@ footer {
 	color: #000000;
 }
 
+/********************************************************************************/
+/***                                  NavBar                                  ***/
+/********************************************************************************/
+
 .navBar {
 	display: flex;
 	justify-content: center;
-	/* gap: 10px; */
 	align-self: center;
 	margin-top: 80px;
 }
@@ -265,16 +171,120 @@ footer {
 	background-color: #3b44be;
 	color: #ffffff;
 	text-decoration: none;
+	font-size: 18px;
 	width: 100%;
 	height: 50px;
 }
 
 .onglets:hover {
 	background-color: #3b78be;
-	color: #ffffff;
-	transform: scale(1.05);
+	transform: scale(1.04);
 	cursor: pointer;
 }
+
+/********************************************************************************/
+/***                              Friends icons                               ***/
+/********************************************************************************/
+
+.friend-item-publication {
+	background: none;
+	border: none;
+	display: flex;
+	justify-content: space-between;
+    align-items: center;
+	gap: 10px;
+	border-radius: 4px;
+}
+
+.friend-item {
+	background-color: #2093ff80;
+	width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+	border: none;
+	margin-bottom: 8px;
+	border-radius: 4px;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+}
+
+.friend-item:hover, .friend-item-publication:hover {
+	transform: scale(1.1);
+	box-shadow: 0 2px 4px #2d45ca96;
+	cursor: pointer;
+}
+
+.friend-avatar {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	padding: 2px;
+}
+
+.friend-name {
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.friend-item-circle-Connected {
+	width: 10px;
+	height: 10px;
+	justify-content: right;
+	border-radius: 50%;
+	background-color: #16f734;
+	border: 1px solid #000000;
+}
+
+.friend-item-circle-Disconnected {
+	width: 10px;
+	height: 10px;
+	justify-content: right;
+	border-radius: 50%;
+	background-color: #f14c4c;
+	border: 1px solid #000000;
+}
+
+/********************************************************************************/
+/***                                Panel Left                                ***/
+/********************************************************************************/
+
+.side-left {
+	background-color: #f5f5f5;
+	padding: 15px;
+	border-radius: 8px;
+}
+
+.content {
+	background-color: #ffffff;
+	padding: 10px;
+	border-radius: 8px;
+}
+
+.one-publication {
+	background-color: #dbecfc;
+	padding: 15px;
+	margin-bottom: 20px;
+	border-radius: 8px;
+    align-items: center; 
+	box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+}
+
+.sub-content {
+	display: flex;
+	justify-content: space-between;
+    align-items: center;
+}
+
+/********************************************************************************/
+/***                               Panel Right                                ***/
+/********************************************************************************/
+
+.side-right {
+	background-color: #f5f5f5;
+	padding: 15px;
+	border-radius: 8px;
+}
+
 
 .line {
     width: 100%;
@@ -293,7 +303,52 @@ footer {
 }
 
 .publicite:hover {
-	transform: scale(1.05);
+	transform: scale(1.02);
 	box-shadow: 0 2px 4px rgba(230, 214, 1, 0.562);
 	cursor: pointer;
+}
+
+/********************************************************************************/
+/***                              Panel Center                                ***/
+/********************************************************************************/
+
+.publication-image {
+	width: 100%;
+	border-radius: 8px;
+}
+
+.publish-date {
+	font-size: 12px;
+    color: #888;
+    margin-left: auto;
+}
+
+.publication-actions {
+	display: flex;
+	justify-content: flex-end;
+    align-items: center;
+	gap: 4px;
+}
+
+.action-button {
+    cursor: pointer;
+	border-radius: 6px;
+	border: 1px solid #3d3d3d;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.15);
+}
+
+.action-button:hover {
+	transform: scale(1.1);
+	box-shadow: 0 2px 4px rgba(0, 173, 0, 0.5);
+	cursor: pointer;
+}
+
+.action-button-img {
+	width: 25px;
+	height: 25px;
+}
+
+.sub-content h3 {
+	font-size: 16px;
+	font-weight: bold;
 }
