--- a/frontend/profil/style.css
+++ b/frontend/profil/style.css
@@ -1,16 +1,44 @@
-.avatar {
-    width: 100px;
-    border-radius: 50%;
-    margin-top: 15px;
-    border: 2px solid #000000;
-    box-shadow: 0 0 10px #00000079;
-    padding: 1px;
-}
-
 body {
     background-color: #cacaca;
     font-family: Arial;
     text-align: center;
+}
+
+.avatar {
+    width: 180px;
+    border-radius: 50%;
+    position: absolute;
+    /* padding: 1px; */
+
+    left: 50px;
+    top: 85px;
+
+    border:2px solid #ddd;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.397);
+}
+
+.cover {
+    width: 100%;
+    height: 250px;
+    opacity: 90%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.banner {
+    position: relative;
+    /* height: 250px;
+    width: 100%; */
+}
+
+.infos {
+    /* color: #c5c5c5; */
+    /* position: relative; */
+}
+
+.Profil {
+    /* position: relative; */
+    /* height: 250px; */
 }
 
 .Profil, .amis, .Contact {
@@ -46,6 +74,28 @@ body {
     padding: 8px;
     margin: 5px;
     border-radius: 30px;
+    /* height: 30px; */
+}
+
+.ami {
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0 0 3px #00000086;
+}
+
+.ami > button {
+    background-color: #bfeac3;
+    padding: 8px;
+    margin: 5px;
+    border: none;
+    border-radius: 18px;
+    box-shadow: 0 0 10px #0000004f;
+    transition: transform 1s, background-color 1s;
+}
+
+.ami > button:hover {
+    transform: scale(1.1);
+    background-color: #52c45d;
 }
 
 .Contact form{
@@ -55,14 +105,20 @@ body {
 
 input{
     margin: 10px;
+    transition: transform 1s, box-shadow 1s, background-color 1s;
 }
 
-input[required]{
-    box-shadow: 0 0 2px purple;
-}
 
-section:hover{
-    box-shadow: 0 0 10px #A20A03;
+/* section:hover{
+    box-shadow: 0 0 10px purple;
+    background-color: #f0f0f0;
+} */
+
+input:focus {
+    transform: scale(1.015);
+    border: none;
+    box-shadow: 0 0 10px purple;
+    background-color: #e7e7e7;
 }
 
 .button {
@@ -81,6 +137,8 @@ section:hover{
 .button:hover{
     background-color: green;
 }
+
+
 
 .amis ul li:hover{
     background-color: #7B86AA;
@@ -112,11 +170,12 @@ section:hover{
 
 .MonContainer > header{
     grid-area: header;
-    background-color: #a0d2eb;
+    background-color: #888888;
+    /* margin: -10; */
 }
 
 .MonContainer > h1 {
-    background-color: #a0d2eb;
+    /* background-color: #a0d2eb; */
     padding: 10px;
 }
 
@@ -151,7 +210,7 @@ section ~ p::after{
 }
 
 nav {
-    background-color: #a0d2eb;
+    /* background-color: #a0d2eb; */
 }
 
 nav > ul{
@@ -235,5 +294,10 @@ nav > button:hover{
     nav > button{
         display: inline-block;
         margin-bottom: 10px;
+    }
+
+    .avatar {
+        /* display: flex; */
+        /* justify-content: center; */
     }
 }
