--- a/frontend/aspNetApp/Components/App.razor
+++ b/frontend/aspNetApp/Components/App.razor
@@ -11,6 +11,7 @@
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
+    <script src="js/theme.js"></script>
 </head>
 
 <body>
