--- a/frontend/aspNetApp/Components/Layout/MainLayout.razor
+++ b/frontend/aspNetApp/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using aspNetApp.Components.widgets
 
 <div class="page">
     <div class="sidebar">
@@ -6,8 +7,9 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
+        <div class="top-row px-4 app-bar">
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <ThemeButton />
         </div>
 
         <article class="content px-4">
